--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,3 @@
-REACT_APP_API_URL=https://backend-reservas.onrender.com
+REACT_APP_API_URL=https://json-backend-reservas-q7uv.onrender.com
+# Para desarrollo local
+# REACT_APP_API_URL=http://localhost:3001
